Removing deprecated constructs